# Neutron_research_code

AmBe/AmBe_gamma_trigger_TOF/Old_Time_of_flight_analysis/: CMakeLists.txt  TOF_Analysis.ipynb  TOF_Analysis_D150m_d3cm_TH3535.ipynb  TOF_Analysis_D200m_d1cm_TH3535.ipynb  TOF_analysis.cc
AmBe/AmBe_gamma_trigger_TOF/Old_Time_of_flight_analysis/.ipynb_checkpoints/: 202210_TOF_response_D150m_d3cm_TH3535-checkpoint.ipynb  TOF_Analysis-checkpoint.ipynb  TOF_Analysis_D150m_d3cm_TH3535-checkpoint.ipynb  TOF_Analysis_D150m_d3cm_TH3535_backup20220114-checkpoint.ipynb  TOF_Analysis_D1m_d3cm-Copy1-checkpoint.ipynb
AmBe/AmBe_gamma_trigger_TOF/Old_Time_of_flight_analysis/Neutron_spectrum/: AmBe_spectrum_2015.json  ISO_8529-2-2.txt  Scherzinger_2015.txt  Scherzinger_2017.json
AmBe/AmBe_gamma_trigger_TOF/Old_Time_of_flight_analysis/processed_TOF_data/: 20211222_TOF_N_wPSD_g1g2_wPSD.txt  20211226_TOF_D1m_d3cm_N_woPSD_g1g2_wPSD_40hrs.txt  20211226_TOF_D1m_d3cm_N_woPSD_g1g2_wPSD_9hrs.txt  20211227_TOF_D1m_d5cm_N_woPSD_g1g2_wPSD_24hrs.txt  20211229_TOF_D150cm_d5cm_N_woPSD_g1g2_wPSD.txt  20220102_TOF_D150cm_d3cm_N_woPSD_g1g2_wPSD_20hours.txt  20220104_TOF_D150cm_d3cm_N_woPSD_g1g2_wPSD_12hours.txt  All_TOF_D150cm_d3cm_N_woPSD_g1g2_wPSD_0104.txt
AmBe/AmBe_gamma_trigger_TOF/Old_Time_of_flight_analysis/processed_TOF_data/.ipynb_checkpoints/: 20211231_TOF_D150cm_d3cm_N_woPSD_g1g2_wPSD_20hours-checkpoint.txt
AmBe/AmBe_gamma_trigger_TOF/Old_Time_of_flight_analysis/processed_TOF_data/D150cm_d3cm_320ns_Threshold_35_35/: 20220108_TOF_TH3535_D150d3cm_N_woPSD_g1g2_wPSD_12hours.txt  (+7 more)
(+319 files in other folders)
